DI-24 Changed app name

--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -15,5 +15,5 @@
   -->
 
 <resources>
-    <string name="app_name">Device Info Debug</string>
+    <string name="app_name">My Droid Info Debug</string>
 </resources>
