--- a/app/src/mock/res/values/strings.xml
+++ b/app/src/mock/res/values/strings.xml
@@ -15,5 +15,5 @@
   -->
 
 <resources>
-    <string name="app_name_mock">Device Info Mock</string>
+    <string name="app_name_mock">My Droid Info Mock</string>
 </resources>
