--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">My Droid Info</string>
     <string name="menu_about">About</string>
+    <string name="menu_share">Share</string>
     <string name="error_no_browser">It seems you don\'t have a browser app installed to open the link</string>
 </resources>
